--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
         </style>
     </head>
     <body>
-        <h1>Welcome to my website!!</h1>
+        <h1>Welcome to my website!</h1>
         <h2>Hello</h2>
         Hello, Hi!
     </body>
